[package]
name = "ln_ms_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
senseicore = { git = "https://github.com/L2-Technology/sensei", rev = "1890787c11a4882338c7380e6125d760a2322242" }
migration = { git = "https://github.com/L2-Technology/sensei", rev = "1890787c11a4882338c7380e6125d760a2322242" }
entity = { git = "https://github.com/L2-Technology/sensei", rev = "1890787c11a4882338c7380e6125d760a2322242" }
signal-hook = "0.3.14"
chrono = "0.4"
tokio = { version = "^1.0", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }
anyhow = "1.0.58"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

[dependencies.sea-orm]
version = "^0.7.1"
features = [
  "sqlx-mysql",
  "sqlx-postgres",
  "sqlx-sqlite", 
  "runtime-tokio-rustls", 
  "macros",
  "debug-print",
  "with-chrono"
]