[package]
name = "ln_ms_server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
actix-files = "0.6.2"
utoipa = { version = "2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "2", features = ["actix-web"] }
ln_ms_lib = { path = "../ln_ms_lib" }
